--- a/src/style/keypad.css
+++ b/src/style/keypad.css
@@ -8,7 +8,7 @@
   position:relative;
   width: fit-content;
   text-align:center;
-  margin: 1em 0 0 2.5em;
+  margin: 1em 0 0 1em;
   padding: 0.5em 0.25em;
   font-weight:bold;
   box-sizing: border-box;
@@ -24,7 +24,9 @@
   text-align: center;
   user-select: none;
   margin: 0.5em 1em 1em 1em;
-  padding: 0.4em 0.5em;
+  padding: 0.4em 0.2em;
+  width:fit-content;
+  min-width:6em;
 }
 
 .key {
